--- a/sk8.html
+++ b/sk8.html
@@ -13,6 +13,7 @@
               <nav>
                 <ul>
                   <li class="button">SUBSCRIBE</li>
+                  <li class="button"><a href="#"><img src="images/fbook.png" alt="" height="60px" width="60px"></a></li>
                   <li class="button"><a href="#"><img src="images/rss-icon.png" alt="" height="60px" width="60px"></a></li>
                   <li class="button"><a href="#"><img src="images/tweet.jpeg" alt="" height="60px" width="60px"></a></li>
                   <li class="button"><a href="#"><img src="images/ytube.jpeg" alt="" height="60px" width="60px"></a></li>
@@ -37,21 +38,20 @@
       <!--3 squares-->
       <article>
         <ul class="big-box">
-          <li class="box">
+          <li class="box1">
             <h3>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h3>
             <h4>October 10, 2013</h4>
               <p>It was just over 90 degrees in Los Angeles, but that didn't stop the throngs from coming out to celebrate the 10th Annual Tony Hawk's Stand Up For Skateparks Benefit Presented by SLS Hotel & Casino Las Vegas on Saturday at the Green Acres Estate in Beverly Hills.</p>
                 <h2 class="tag">[READ MORE]</h2>
           </li>
-          <li class="box">
-            <h3>Rodney Mullen: Pop an ollie and innovate! (TED Talk)</h3>
+          <li class="box2">
+            <h3>Rodney Mullen: Pop an ollie and innovate!(TED Talk)</h3>
               <h4>March 10, 2013</h4>
                 <p>The last thing Rodney Mullen, the godfather of street skating, wnted were cometitive victories. In this exuberant talk he shares his love of the open skateboarding community and how the unique environments it plays in drive the creation of new tricks -- fostering...</p>
                   <h2 class="tag">[READ MORE]</h2>
           </li>
-          <li class="box">
-            <h3>Ray Barbee Talks
-              'Ban This'</h3>
+          <li class="box3">
+            <h3>Ray Barbee Talks 'Ban This'</h3>
               <h4>Oct 4, 2013</h4>
                 <p>Since filming is in full swing for the Vans video Adventures With Chris has taken the opportunity to sit some of the team down to look behind the skating of some of their earlier parts. Today we sit down Ray Barbee, one of the smoothest guys to ever step on a skateboard and Chris' childhood idol...</p>
                   <h2 class="tag">[ READ MORE ]</h2>
@@ -59,24 +59,52 @@
     </section>
   <!--Middle pictures-->
     <div class="flex-container">
-    <ul>
+      <ul>
       <li class="item1"><p class="name">LANCE MOUNTAIN</p></li>
       <li class="item2"><p class="name">RODNEY MULLEN</p></li>
-      <li class="item3"><p class="name">STEVE CABALLERO</p></li>
-      <li class="item4"><p class="name">TOMMY GUERRERO</p></li>
+      <li class="item3"><p class="name">TOMMY GUERRERO</p></li>
+      <div class="item4"><p class="name">STEVE CABALLERO</p></div>
   </div>
-  <div class="sktbds"></div>
-  <footer>
-    <h5>Contact Us for More Information</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error ipsum asperiores qui eveniet, nostrum totam doloremque dolorem voluptatem tenetur molestiae. Corrupti qui similique aut tempora sapiente a quis, ex dicta!</p>
+  <div class="sktbds">
     <ul>
-      <li>facebook icon</li>
-      <li>rss icon</li>
-      <li>Twitter</li>
-      <li>YouTube</li>
+        <li class="boards"><img src="images/sk8-3.png" alt=""></li>
+        <li class="boards"><img src="images/sk8-4.png" alt=""></li>
+        <li class="boards"><img src="images/sk8-5.png" alt=""></li>
+        <li class="boards"><img src="images/sk8-6.png" alt=""></li>
+        <li class="boards"><img src="images/sk8-7.png" alt=""></li>
+        <li class="boards"><img src="images/sk8-8.png" alt=""></li>
+        <li class="boards"><img src="images/sk8-9.png" alt=""></li>
+        <li class="boards"><img src="images/sk8-10.png" alt=""></li>
+        <li class="boards"><img src="images/sk8-2.png" alt=""></li>
+        <li class="boards"><img src="images/sk8-1.png" alt=""></li>
+
+  </div>
+  <footer>
+    <div class="details"
+    <h5>Contact Us for More Information</h5>
+    <p class"information">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error ipsum asperiores qui eveniet, nostrum totam doloremque dolorem voluptatem tenetur molestiae. Corrupti qui similique aut tempora sapiente a quis, ex dicta!</p>
+    <ul>
+      <li class="button"><a href="#"><img src="images/fbook.png" alt="" height="20px" width="20px"></a></li>
+      <li class="button"><a href="#"><img src="images/rss-icon.png" alt="" height="20px" width="20px"></a></li>
+      <li class="button"><a href="#"><img src="images/tweet.jpeg" alt="" height="20px" width="20px"></a></li>
+      <li class="button"><a href="#"><img src="images/ytube.jpeg" alt="" height="20px" width="20px"></a></li>
     </ul>
-    <boxes></boxes>
-    <p>submit</p>
+  </div>
+    <div class="fill-in">
+        <form class="contact">
+          <fieldset class="form">
+            <label for="Name"></label>
+            <input id="Name" type="Name" placeholder="Name">
+
+            <label for="email"></label>
+            <input id="EMAIL" type="EMAIL" placeholder="EMAIL">
+
+            <label for="Your Message"></label>
+            <select id="comments"></select>
+          </fieldset>
+        </form>
+
+    <p class="submit">SUBMIT</p>
   </footer>
 </body>
 </html>
